--- a/style.css
+++ b/style.css
@@ -1,3 +1,60 @@
-h1{
-    color: red;
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+/* layout */
+
+/* 1.1.main-layout */
+
+body,
+html,
+.layout-container,
+.header-container,
+.sidebar-container,
+.content-container {
+  margin: 0;
+  display: grid;
+}
+
+.layout-container {
+  grid-template-columns: 2fr 8fr;
+  grid-template-rows: 2fr 8fr;
+  width: 100vw;
+  height: 100vh;
+}
+
+/* 1.2.header-layout */
+
+.header-container {
+  background-color: white;
+  grid-template-rows: 1fr 1fr;
+}
+
+.inside-header-container-top {
+  background-color: rgba(255, 155, 155, 1);
+}
+.inside-header-container-bot {
+  background-color: rgba(255, 155, 155, 0.6);
+}
+
+/* 1.3.sidebar-layout */
+.sidebar-container {
+  grid-row: 1 / 3;
+  background-color: rgb(107, 209, 240);
+}
+/* 1.4.content-layout */
+
+.content-container {
+  grid-row: 2 / 3;
+  grid-template-columns: 6fr 2fr;
+  background-color: rgba(128, 128, 128, 0.2);
+}
+
+.inside-content-container-main {
+  background-color: rgba(197, 197, 197, 1);
+}
+.inside-content-container-side {
+  background-color: rgba(197, 197, 197, 0.6);
 }
