--- a/style.css
+++ b/style.css
@@ -12,14 +12,13 @@ body,
 html,
 .layout-container,
 .header-container,
-.sidebar-container,
 .content-container {
   margin: 0;
   display: grid;
 }
 
 .layout-container {
-  grid-template-columns: 2fr 8fr;
+  grid-template-columns: 1fr 6fr;
   grid-template-rows: 2fr 8fr;
   width: 100vw;
   height: 100vh;
@@ -58,3 +57,136 @@ html,
 .inside-content-container-side {
   background-color: rgba(197, 197, 197, 0.6);
 }
+
+/* Elements */
+
+/* 2.1.header-elements */
+
+.inside-header-container-top {
+  display: grid;
+  grid-template-columns: 4fr 2fr;
+}
+
+.alert-usericon-name-container,
+.search-input-container {
+  align-self: center;
+}
+
+.search-input-container {
+  display: grid;
+  grid-template-columns: 1fr 10fr;
+}
+
+.alert-usericon-name-container {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  margin-left: 5rem;
+}
+
+.icon-alert-user-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.search-icon,
+.notification-icon {
+  height: 25px;
+  width: 25px;
+}
+
+.input {
+  border-radius: 1rem;
+}
+
+.notification-icon {
+  align-self: center;
+  justify-self: end;
+  margin: 1rem;
+}
+
+.search-icon-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.person-profile-icon {
+  height: 50px;
+  width: 50px;
+  align-self: center;
+  justify-self: start;
+  background-color: brown;
+  border-radius: 2rem;
+  padding: 0.2rem;
+}
+
+.user-name {
+  display: inline;
+  align-self: center;
+  justify-self: start;
+  font-weight: 900;
+  font-size: 2rem;
+  margin: 0 0 0 1rem;
+}
+
+.inside-header-container-bot {
+}
+
+/* 2.2.sidebar-elements */
+
+.h1-container,
+.menu-container,
+.menu-setting-container {
+  color: rgb(0, 0, 0);
+}
+
+.menu-container,
+.menu-setting-container {
+  padding: 5%;
+  font-size: 1.3rem;
+}
+
+.h1-container {
+  text-align: center;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+.sidebar-h1 {
+  font-size: 1.7rem;
+  padding-right: 1rem;
+}
+
+.sidebar-icon {
+  height: 4rem;
+  width: 4rem;
+}
+
+.sidebar-href-container {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  align-items: center;
+  padding: 2%;
+}
+
+div > ul a {
+  text-decoration: none;
+  color: inherit;
+}
+
+ul > div > img {
+  height: 25px;
+  width: 25px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+li {
+  padding: 0.3rem;
+}
+
+/* 2.3.content-elements */
