--- a/style.css
+++ b/style.css
@@ -46,8 +46,7 @@ html,
 /* 1.4.content-layout */
 
 .content-container {
-  grid-row: 2 / 3;
-  grid-template-columns: 6fr 2fr;
+  grid-template-columns: 4fr 1fr;
   background-color: rgba(128, 128, 128, 0.2);
 }
 
@@ -235,19 +234,75 @@ li {
 
 /* 2.3.content-elements */
 
-.inside-content-container-main{
+.inside-content-container-main {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
 }
 
-.project-cards{
+.project-cards {
   border: black solid 1px;
-  margin: 1rem;
-  padding: 1rem;
+  border-radius: 1rem;
+  border-left: 5px solid red;
+  margin: 2rem;
+  padding: 3rem;
 }
 
 .card-icon-container > img {
   height: 25px;
   width: 25px;
 }
+
+.inside-content-container-side {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  margin-top: 1rem;
+  gap: 1rem;
+}
+
+.side-card1,
+.side-card2 {
+  border: black solid 1px;
+  border-radius: 1rem;
+  margin: 0 1rem 0 1rem;
+  height: fit-content;
+}
+
+
+.trending-user-container {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  padding: 1rem;
+  align-self: center;
+  justify-self: center;
+}
+
+.trending-user-info-container{
+  display: grid;
+  align-self: center;
+  justify-self: center;
+}
+
+.trending-user-info-container > p,
+h5 {
+  margin: 0;
+}
+
+.side-card-content-container {
+  padding: 1rem;
+}
+
+.trending-user-container > img {
+  height: 50px;
+  width: 50px;
+  align-self: center;
+  justify-self: start;
+  background-color: brown;
+  border-radius: 2rem;
+  padding: 0.2rem;
+}
+
+.titles-of-content {
+  color: red;
+  margin: 1rem;
+}
+
