--- a/style.css
+++ b/style.css
@@ -53,7 +53,11 @@ html,
 }
 .inside-header-container-bot {
   background-color: var(--clr-main-blue);
+  padding-left: 10px;
+  padding-bottom: 10px;
 }
+
+
 
 /* 1.3.sidebar-layout */
 .sidebar-container {
@@ -150,7 +154,7 @@ input {
   font-weight: 900;
   font-size: 2rem;
   margin: 0 0 0 1rem;
-  text-decoration: underline;
+  text-decoration: underline var(--clr-compliment-red);
 }
 
 .inside-header-container-bot {
